--- a/src/pages/repo/RepoPage.css
+++ b/src/pages/repo/RepoPage.css
@@ -7,12 +7,11 @@
     color: rgb(57, 48, 48);
     font-weight:bolder;
     font-size:xx-large;
-    margin-top: 2%;
     padding-top: 2%;
 }
 
 .ele{
-    background-color:rgb(208, 213, 213);
+    background-image: linear-gradient(#393f4d,#474d5a);
     margin-left:1% ;
     margin-right: 1%;
     margin-bottom: 1%;
@@ -20,7 +19,23 @@
 .all-repos{
     display: flex;
     flex-direction: column;
+    margin: 2px;
 }
+.base{
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 10%;
+    background-color:rgb(147, 155, 160);
+    color: black;
+    font-size: larger;
+    border-radius: 10px;
+    display: inline-flex;
+    flex-direction:row;
+    justify-content: space-between;
+    margin-bottom: 2%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
 .org-label{
     font-weight: bold;
     font-size: larger;
@@ -29,22 +44,6 @@
     font-weight: bold;
     font-size: larger;
 }
-.base{
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 10%;
-    background-color:#34495e;
-    color: white;
-    font-size: larger;
-    border-radius: 10px;
-    display: inline-flex;
-    flex-direction:row;
-    justify-content: space-between;
-    margin-bottom: 2%;
-}
-
-
-
 .repoName{
     padding-left: 5%;
 }
@@ -66,6 +65,7 @@
     border-radius: 10px;
     text-align: left;
     padding-left: 1%;
+    overflow: hidden;
 }
 
 .users{
