--- a/src/pages/repo/RepoPage.css
+++ b/src/pages/repo/RepoPage.css
@@ -4,17 +4,16 @@
 }
 .title{
     font-size: xx-large;
-    color: rgb(57, 48, 48);
+    color: rgb(74, 67, 67);
     font-weight:bolder;
     font-size:xx-large;
     padding-top: 2%;
 }
 
 .ele{
-    background-image: linear-gradient(#393f4d,#474d5a);
-    margin-left:1% ;
-    margin-right: 1%;
-    margin-bottom: 1%;
+    background: linear-gradient(to bottom, #9f9e9e, #8c8989);
+
+
 }
 .all-repos{
     display: flex;
@@ -46,6 +45,7 @@
 }
 .repoName{
     padding-left: 5%;
+    color: white;
 }
 .dropdown:hover{
     color: rgb(32, 32, 31);
@@ -58,9 +58,9 @@
 }
 
 .details{
-    background-color: rgb(189, 201, 209);
-    margin-left: 20%;
-    margin-right: 20%;
+    background-color: rgb(178, 180, 170);
+    margin-left: 15%;
+    margin-right: 15%;
     margin-top: 0.2%;
     border-radius: 10px;
     text-align: left;
